--- a/package.json
+++ b/package.json
@@ -10,26 +10,53 @@
   },
   "dependencies": {
     "@expo-google-fonts/dm-sans": "^0.2.3",
+    "@react-native-community/netinfo": "^11.1.0",
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
+    "@reduxjs/toolkit": "^1.9.7",
     "add": "^2.0.6",
+    "assert": "^1.5.1",
     "expo": "~49.0.15",
     "expo-status-bar": "~1.6.0",
+    "https-browserify": "^0.0.1",
+    "path-browserify": "^0.0.0",
     "react": "18.2.0",
     "react-native": "0.72.6",
+    "react-native-crypto": "^2.2.0",
+    "react-native-element-dropdown": "^2.10.0",
+    "react-native-level-fs": "^3.0.1",
+    "react-native-modal": "^13.0.1",
+    "react-native-randombytes": "^3.6.1",
     "react-native-safe-area-context": "^4.7.4",
     "react-native-screens": "^3.27.0",
     "react-native-url-polyfill": "^2.0.0",
+    "react-redux": "^8.1.3",
+    "redux-logger": "^3.0.6",
+    "rn-nodeify": "^10.3.0",
     "twrnc": "^3.6.4",
+    "util": "^0.10.4",
     "yarn": "^1.22.19"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.14",
+    "@types/redux-logger": "^3.0.12",
     "prettier-plugin-organize-imports": "^3.2.4",
     "prettier-plugin-tailwindcss": "^0.5.7",
     "typescript": "^5.1.3"
   },
-  "private": true
+  "private": true,
+  "react-native": {
+    "crypto": "react-native-crypto",
+    "https": "https-browserify",
+    "fs": "react-native-level-fs",
+    "path": "path-browserify"
+  },
+  "browser": {
+    "crypto": "react-native-crypto",
+    "https": "https-browserify",
+    "fs": "react-native-level-fs",
+    "path": "path-browserify"
+  }
 }
